Changelog
*********

trunk (0.6dev)
--------------

- no changes yet

0.5 (2009-05-18)
----------------

- Changed log level to DEBUG [hplocher]

0.4 (2009-05-13)
----------------

- implemented api method:
    update_recipient(api_url, list_id, old_email, columns=[])
    opt_in_recipient(api_url, list_id, email, columns=[])
    [hplocher]

0.3 (2009-05-12)
----------------

- implemented api methods:
    is_opted_in(api_url, list_id, email)
    select_recipient_data(api_url, list_id, email, column=None)
    [hplocher]


0.2 (2009-05-12)
----------------

- added doctest [hplocher]
- refactored [hplocher]
- implemented xml_request(api_url, xml) [hplocher]

0.1 (2009-05-12)
----------------

- Initial release
- implemented api methods:
    add_recipient(api_url, list_id, email, columns=[])
    opt_out_recipient(api_url, list_id, email)
    [hplocher]
- mocked api methods:
    is_opted_in(api_url, list_id, email)
    select_recipient_data(api_url, list_id, email, columns=[])
    xml_request(api_url, xml)
    [hplocher]

- initial package skeleton [hplocher]